--- a/style/login.css
+++ b/style/login.css
@@ -81,3 +81,15 @@ td {
     border: #d8d8d8;
     font-size: 15px;
 }
+@media (max-width: 700px) {
+    nav {
+        flex-direction: column;
+        align-items: center;
+    }
+    nav a {
+        padding: 10px;
+    }
+    nav .logo{
+        margin: 0;
+    }
+}
