--- a/style/login.css
+++ b/style/login.css
@@ -1,9 +1,10 @@
-body{
+body {
     font-family: sans-serif;
     margin: 0;
     padding: 0;
     background-color: rgb(255, 255, 255);
 }
+
 nav {
     display: flex;
     align-items: center;
@@ -12,19 +13,23 @@ nav {
     border-radius: 15px;
     margin: 10px;
 }
-nav > a {
+
+nav>a {
     color: black;
     text-decoration: none;
     padding: 14px 20px;
     font-weight: bold;
 }
+
 nav a:hover {
     background-color: #3d3d3d;
     border-radius: 20%;
 }
+
 nav .logo {
     margin-left: auto;
 }
+
 .form-container {
     display: flexbox;
     background-color: #d8d8d8;
@@ -33,16 +38,19 @@ nav .logo {
     margin: 50px auto;
     border-radius: 10px;
 }
+
 .form-container h1 {
     font-size: 24px;
     color: black;
     margin-bottom: 20px;
     text-align: center;
 }
+
 table {
     width: 100%;
     margin-bottom: 0px;
 }
+
 td {
     display: flex;
     flex-direction: column;
@@ -56,7 +64,7 @@ td {
     margin: 5px 0;
 }
 
-.login td input + input{
+.login td input+input {
     margin: 10px;
 }
 
@@ -75,12 +83,13 @@ td {
     display: block;
     margin: 15px auto;
 }
-.form-container button:hover{
+
+.form-container button:hover {
     background-color: blue;
 }
 
-.login-form{
-    
+.login-form {
+
     width: 40%;
     padding: 8px;
     border-radius: 2px;
@@ -88,18 +97,21 @@ td {
     font-size: 15px;
 }
 
-nav ~ .form-container{
+nav~.form-container {
     padding: 20px;
-    
+}
+
 @media (max-width: 700px) {
     nav {
         flex-direction: column;
         align-items: center;
     }
+
     nav a {
         padding: 10px;
     }
-    nav .logo{
+
+    nav .logo {
         margin: 0;
     }
 }
