--- a/style/addPost.css
+++ b/style/addPost.css
@@ -1,9 +1,10 @@
-body{
+body {
     font-family: sans-serif;
     margin: 0;
     padding: 0;
     background-color: rgb(255, 255, 255);
 }
+
 nav {
     display: flex;
     align-items: center;
@@ -12,19 +13,58 @@ nav {
     border-radius: 15px;
     margin: 10px;
 }
+
 nav a {
     color: black;
     text-decoration: none;
     padding: 14px 20px;
     font-weight: bold;
 }
+
 nav a:hover {
     background-color: #3d3d3d;
     border-radius: 20%;
 }
+
 nav .logo {
     margin-left: auto;
 }
+
+nav .logo:hover {
+    cursor: pointer;
+}
+
+.dropdownMenu {
+    position: relative;
+    margin-left: auto;
+}
+
+.dropdownMenu {
+    display: none;
+    position: absolute;
+    top: 70px;
+    right: 10px;
+    background-color: #d9d9d9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1;
+}
+
+.dropdownMenu p {
+    margin: 0;
+    padding: 7px;
+    text-decoration: none;
+    display: block;
+    color: black;
+    font-weight: normal;
+}
+
+.dropdownMenu a:hover {
+    background-color: #bfbfbf;
+}
+
 .form-container {
     background-color: #d8d8d8;
     padding: 20px;
@@ -32,21 +72,25 @@ nav .logo {
     margin: 50px auto;
     border-radius: 10px;
 }
+
 .form-container h1 {
     font-size: 24px;
     color: black;
     margin-bottom: 20px;
     text-align: center;
 }
+
 table {
     width: 100%;
     margin-bottom: 20px;
 }
+
 td {
     padding: 10px;
     vertical-align: top;
     text-align: right;
 }
+
 #content {
     width: 100%;
     padding: 10px;
@@ -54,25 +98,30 @@ td {
     font-size: 14px;
     border: none;
 }
+
 textarea::placeholder {
     color: #888;
     font-style: italic;
 }
+
 input[type="file"] {
     display: none;
 }
+
 .custom-file-input {
     border: 1px solid #000000;
     background-color: gray;
     color: white;
     padding: 6px 12px;
-    cursor: pointer; 
+    cursor: pointer;
     float: left;
     white-space: nowrap;
 }
-.custom-file-input:hover{
+
+.custom-file-input:hover {
     background-color: #616161;
 }
+
 .form-container button {
     padding: 8px;
     font-size: 14px;
@@ -84,7 +133,8 @@ input[type="file"] {
     display: block;
     margin: 15px auto;
 }
-.form-container button:hover{
+
+.form-container button:hover {
     background-color: blue;
 }
 
@@ -93,13 +143,16 @@ input[type="file"] {
         flex-direction: column;
         align-items: center;
     }
+
     nav a {
         padding: 10px;
     }
-    nav .logo{
+
+    nav .logo {
         margin: 0;
     }
-    .form-container{
+
+    .form-container {
         width: 40%;
     }
 }
