--- a/ao-wad/src/styles/index.css
+++ b/ao-wad/src/styles/index.css
@@ -50,7 +50,7 @@ footer {
     margin: 10px;
 }
 
-body {
+.body {
     font-family: sans-serif;
     margin: 0;
     padding: 0;
@@ -84,37 +84,6 @@ nav .logo {
 
 nav .logo:hover {
     cursor: pointer;
-}
-
-.dropdownMenu {
-    position: relative;
-    margin-left: auto;
-}
-
-.dropdownMenu {
-    display: none;
-    position: absolute;
-    top: 70px;
-    right: 10px;
-    background-color: #d9d9d9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 10px;
-    border-radius: 5px;
-    z-index: 1;
-}
-
-.dropdownMenu p {
-    margin: 0;
-    padding: 7px;
-    text-decoration: none;
-    display: block;
-    color: black;
-    font-weight: normal;
-}
-
-.dropdownMenu a:hover {
-    background-color: #bfbfbf;
 }
 
 table {
